projects ve angler exploit Kit

--- a/projects.html
+++ b/projects.html
@@ -1,26 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Projects — Under Construction</title>
-  <link href="style.css" rel="stylesheet" />
+  <!--  Mobirise v5 çekirdekleri  -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+
+  <title>Tuna | Projects</title>
+
+  <!-- ikonlar + bootstrap + tema -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mobirise-icons@2.0.0/mobirise2.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/mobirise/mobirise5@main/m5-theme/css/style.css">
+  <!-- kendi ek CSS’in varsa -->
+  <link rel="stylesheet" href="style.css">
 </head>
-<body class="flex items-center justify-center min-h-screen bg-gray-50 text-gray-800">
 
-  <div class="text-center px-6">
-    <h1 class="text-4xl font-bold text-blue-600">🚧 Projects Coming Soon</h1>
-    <p class="mt-4 text-lg text-gray-600 max-w-xl">
-      This section is under construction. I'm still curating and polishing my work to share with you!
-    </p>
-    <p class="mt-2 text-sm text-gray-500 italic">
-      (But hey — if you got here by clicking a skill, good eye 👀)
-    </p>
+<body>
 
-    <a href="index.html" class="inline-block mt-6 px-5 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 transition">
-      ← Back to Home
-    </a>
+
+<!-- 🧭 Navbar -->
+<nav class="bg-white shadow p-4 flex justify-between items-center">
+  <h1 class="text-xl font-bold">Tuna</h1>
+  <ul class="flex gap-4">
+    <li><a href="index.html" class="hover:text-blue-500">Home</a></li>
+    <li><a href="cv.html" class="hover:text-blue-500">CV</a></li>
+    <li><a href="projects.html" class="hover: text-blue-600">Projects</a></li>
+  </ul>
+</nav>
+
+<!-- 🔧  SECTION TITLE -->
+<section class="py-5">
+  <div class="container text-center">
+    <h2 class="display-2 fw-bold"><span>🛠️</span> My Projects</h2>
   </div>
+</section>
 
+<!-- 📦  PROJECT CARD  -->
+<section class="article07" id="article07-abcd-bank">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="card col-md-12 col-lg-10 shadow-lg rounded-4 overflow-hidden">
+        <div class="card-wrapper p-4 p-md-5">
+
+          <!-- kart başlığı -->
+          <h3 class="card-title display-6 fw-bold mb-4">
+            🕵️ Angler Exploit Kit - PCAP Network Forensics Case Study
+          </h3>
+
+          <div class="row card-box align-left">
+
+            <!-- 1. blok -->
+            <div class="item col-12">
+              <div class="item-wrapper">
+                <h4 class="mbr-section-subtitle mb-3 fs-4 fw-semibold">Case Overview</h4>
+                <p class="mbr-text fs-5">
+                  PCAP forensics on a multi-stage Angler EK attack chain using malicious Java payloads.
+                </p>
+              </div>
+            </div>
+          </div> <!-- /.card-box -->
+        </div> <!-- /.card-wrapper -->
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ⌛ PLACEHOLDER -->
+<section class="py-5">
+  <div class="container">
+    <div class="rounded-4 border-4 border-dashed border-secondary bg-light text-center py-5">
+      <h4 class="fs-2 fw-semibold text-secondary mb-2">More Projects Coming Soon</h4>
+      <p class="text-muted">Stay tuned for upcoming work.</p>
+    </div>
+  </div>
+</section>
+
+<!-- 📜 FOOTER -->
+<footer class="text-center py-4 border-top">
+  <small class="text-muted">© 2025 Tuna Gökgöz</small>
+</footer>
+
+<!-- Bootstrap JS  -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
